Add FontAwesome and first job unformatted

--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -4,6 +4,8 @@
 // Import custom Bootstrap variables
 @import "bootstrap-variables";
 
+@import "bootstrap-sprockets";
+
 // Import Bootstrap for Sass
 @import "bootstrap";
 
@@ -14,4 +16,21 @@ div[class="row"] {
 
 div[class^="col-"] {
     background-color: rgba(255, 0, 0, 0.2);
+}
+
+// Lists
+ul,li[class^="list-"] { 
+    border: 0; 
+    list-style-type: square;
+    padding: 2px 20px;
+}
+
+li:before {
+    content: "\f069";
+    font-family: FontAwesome;
+    font-size: 8px;
+    float: left;
+    margin-top: 3px;
+    margin-left: -13px;
+    color: #000;
 }
