--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -310,8 +310,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url(/fonts/bootstrap/glyphicons-halflings-regular.eot?1491778988);
-  src: url(/fonts/bootstrap/glyphicons-halflings-regular.eot?&1491778988#iefix) format("embedded-opentype"), url(/fonts/bootstrap/glyphicons-halflings-regular.woff2?1491778988) format("woff2"), url(/fonts/bootstrap/glyphicons-halflings-regular.woff?1491778988) format("woff"), url(/fonts/bootstrap/glyphicons-halflings-regular.ttf?1491778988) format("truetype"), url(/fonts/bootstrap/glyphicons-halflings-regular.svg?1491778988#glyphicons_halflingsregular) format("svg");
+  src: url(font-path("bootstrap/glyphicons-halflings-regular.eot"));
+  src: url(font-path("bootstrap/glyphicons-halflings-regular.eot?#iefix")) format("embedded-opentype"), url(font-path("bootstrap/glyphicons-halflings-regular.woff2")) format("woff2"), url(font-path("bootstrap/glyphicons-halflings-regular.woff")) format("woff"), url(font-path("bootstrap/glyphicons-halflings-regular.ttf")) format("truetype"), url(font-path("bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular")) format("svg");
 }
 .glyphicon {
   position: relative;
@@ -7340,4 +7340,20 @@ div[class="row"] {
 
 div[class^="col-"] {
   background-color: rgba(255, 0, 0, 0.2);
+}
+
+ul, li[class^="list-"] {
+  border: 0;
+  list-style-type: square;
+  padding: 2px 20px;
+}
+
+li:before {
+  content: "\f069";
+  font-family: FontAwesome;
+  font-size: 8px;
+  float: left;
+  margin-top: 3px;
+  margin-left: -13px;
+  color: #000;
 }
