--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -4,7 +4,6 @@
 // @import "bootstrap-grid";
 // or Import Bootstrap Reboot
 // @import "bootstrap-reboot";
-
 // Import Bootstrap for Sass
 @import "bootstrap";
 // Import custom Bootstrap variables
@@ -14,34 +13,26 @@ div[class="row"] {
  border: 1px dotted rgba(0, 0, 0, 0.5);
 }
 
-div[class^="col-"] {
- background-color: rgba(255, 0, 0, 0.2);
+div[class^="col"] {
+ border: dotted rgba(255, 0, 0, 0.2);
 }
 
-// Mixins
-@mixin breakpoint($class) {
- @if $class==xs {
-  @media (max-width: 767px) {
-   @content;
-  }
+// Breakpoint Specific CSS
+.job-date {
+ text-align: right;
+ padding-top: 2px;
+}
+
+html {
+ font-size: 10px;
+ @include media-breakpoint-up(sm) {
+  font-size: 12px;
  }
- @else if $class==sm {
-  @media (min-width: 768px) {
-   @content;
-  }
+ @include media-breakpoint-up(md) {
+  font-size: 14px;
  }
- @else if $class==md {
-  @media (min-width: 992px) {
-   @content;
-  }
- }
- @else if $class==lg {
-  @media (min-width: 1200px) {
-   @content;
-  }
- }
- @else {
-  @warn "Breakpoint mixin supports: xs, sm, md, lg";
+ @include media-breakpoint-up(lg) {
+  font-size: 16px;
  }
 }
 
@@ -49,18 +40,17 @@ div[class^="col-"] {
 ul,
 li[class^="list-"] {
  border: 0;
- list-style-type: square;
- padding: 2px 5px;
+ padding-top: 0px;
+ padding-bottom: 0px;
+ padding-left: 15px;
+ display: inline-block;
 }
 
 li:before {
  content: "\f069";
  font-family: FontAwesome;
- font-size: 10px;
+ padding-right: 5px;
  float: left;
- margin-top: 3px;
- margin-left: 0px;
- margin-right: 5px;
  color: #000;
 }
 
@@ -78,23 +68,21 @@ span.avoidwrap {
 }
 
 .job-company-description {
- padding-bottom: 10px;
+ padding-bottom: 0px;
+}
+
+h5 {
+ margin-top: 5px;
+ margin-bottom: 0px;
 }
 
 .skillset {
  padding-top: 10px;
 }
 
-// Breakpoint Specific CSS
-.job-date {
- text-align: right;
- padding-top: 2px;
- @include breakpoint(xs) {
-  font-size: 0.78em;
-  padding-top: 13px;
- }
-}
-
-.contact, .links, .description, .job {
-    padding-bottom: 15px;
+.contact,
+.links,
+.description,
+.job {
+ padding-bottom: 15px;
 }
