--- a/css/jsontree.css
+++ b/css/jsontree.css
@@ -1,6 +1,6 @@
 .jstValue {
     white-space: pre-wrap;
-    font-size: 14px;
+    /*font-size: 14px;*/
     font-weight: 400;
     font-family: "Lucida Console", Monaco, monospace;
 }
