--- a/css/styles.css
+++ b/css/styles.css
@@ -8528,25 +8528,48 @@ div[class="row"] {
   border: 1px dotted rgba(0, 0, 0, 0.5);
 }
 
-div[class^="col-"] {
-  background-color: rgba(255, 0, 0, 0.2);
+div[class^="col"] {
+  border: dotted rgba(255, 0, 0, 0.2);
+}
+
+.job-date {
+  text-align: right;
+  padding-top: 2px;
+}
+
+html {
+  font-size: 10px;
+}
+@media (min-width: 576px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (min-width: 992px) {
+  html {
+    font-size: 16px;
+  }
 }
 
 ul,
 li[class^="list-"] {
   border: 0;
-  list-style-type: square;
-  padding: 2px 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 15px;
+  display: inline-block;
 }
 
 li:before {
   content: "\f069";
   font-family: FontAwesome;
-  font-size: 10px;
+  padding-right: 5px;
   float: left;
-  margin-top: 3px;
-  margin-left: 0px;
-  margin-right: 5px;
   color: #000;
 }
 
@@ -8563,24 +8586,21 @@ span.avoidwrap {
 }
 
 .job-company-description {
-  padding-bottom: 10px;
+  padding-bottom: 0px;
+}
+
+h5 {
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
 
 .skillset {
   padding-top: 10px;
 }
 
-.job-date {
-  text-align: right;
-  padding-top: 2px;
-}
-@media (max-width: 767px) {
-  .job-date {
-    font-size: 0.78em;
-    padding-top: 13px;
-  }
-}
-
-.contact, .links, .description, .job {
+.contact,
+.links,
+.description,
+.job {
   padding-bottom: 15px;
 }
