--- a/css/styles.css
+++ b/css/styles.css
@@ -8524,19 +8524,13 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   }
 }
 
-div[class="row"] {
-  border: 1px dotted rgba(0, 0, 0, 0.5);
+/*div[class="row"] {
+ border: 1px dotted rgba(0, 0, 0, 0.5);
 }
 
 div[class^="col"] {
-  border: dotted rgba(255, 0, 0, 0.2);
-}
-
-.job-date {
-  text-align: right;
-  padding-top: 2px;
-}
-
+ border: dotted rgba(255, 0, 0, 0.2);
+}*/
 html {
   font-size: 10px;
 }
@@ -8599,14 +8593,14 @@ span.avoidwrap {
   display: inline-block;
 }
 
+.job-date {
+  text-align: right;
+  padding-top: 2px;
+}
+
 .job-company-location,
 .job-company-description {
   padding-bottom: 0px;
-}
-
-h5 {
-  margin-top: 5px;
-  margin-bottom: 0px;
 }
 
 .skillset {
@@ -8618,6 +8612,11 @@ h5 {
 .description,
 .job {
   padding-bottom: 15px;
+}
+
+h5 {
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
 
 .expst:before {
@@ -8640,4 +8639,19 @@ h5 {
   font-size: 1.5em;
   color: #000;
   float: left;
+}
+
+@media print {
+  ::first-letter {
+    margin: 0;
+    padding: 0;
+  }
+
+  .html {
+    color: black;
+  }
+
+  .links {
+    display: none;
+  }
 }
