--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -63,7 +63,8 @@ li:before {
 }
 
 // General CSS
-.body {
+.body,
+.header {
  padding-top: 10px;
 }
 
@@ -132,7 +133,17 @@ h5 {
  .html {
   color: black;
  }
+ .body,
+ .header {
+  padding-top: 0px;
+ }
  .links {
   display: none;
  }
+ li:before {
+ content: "*";
+ font-family: Lucida Console;
+ top:1px;
+ }
+ .colst:before, .expst:before {display:none;}
 }
