Fix padding on top and mobile responsive

--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -20,6 +20,8 @@ div[class^="col"] {
 
 // Breakpoint Specific CSS
 html {
+ padding-top: 7vw;
+ padding-bottom: 7vw;
  font-size: 10px;
  @include media-breakpoint-up(sm) {
   font-size: 12px;
