--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -20,23 +20,23 @@ div[class^="col"] {
 
 // Breakpoint Specific CSS
 html {
- font-size: 10px;
+ font-size: 4vw;
  @include media-breakpoint-up(sm) {
-  font-size: 12px;
+  font-size: 2vw;
  }
  @include media-breakpoint-up(md) {
-  font-size: 14px;
+  font-size: 2vw;
  }
  @include media-breakpoint-up(lg) {
-  font-size: 16px;
+  font-size: 0.8vw;
  }
 }
 
-@include media-breakpoint-up(sm) {
- .job-summary,
- .job-achievements,
- .job-responsibilities,
- .list-group {
+.job-summary,
+.job-achievements,
+.job-responsibilities,
+.list-group {
+ @include media-breakpoint-up(xl) {
   padding-left: 10px;
  }
 }
