--- a/dev/html/css/styles.css
+++ b/dev/html/css/styles.css
@@ -8684,6 +8684,8 @@ h5 {
     padding-top: 0px;
     padding-bottom: 0px;
     font-size: 8px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .body,
@@ -8696,6 +8698,7 @@ h5 {
   }
 
   .jobs,
+  .list-group,
   .education {
     page-break-inside: avoid;
   }
