--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -76,6 +76,65 @@ li:before {
  }
 }
 
+// JsonTree
+.jstValue {
+ white-space: pre-wrap;
+ /*font-size: 14px;*/
+ font-weight: 400;
+ font-family: "Lucida Console", Monaco, monospace;
+}
+
+.jstComma {
+ white-space: pre-wrap;
+}
+
+.jstProperty {
+ color: #666;
+ word-wrap: break-word;
+}
+
+.jstBracket {
+ white-space: pre-wrap;
+}
+
+.jstBool {
+ color: #2525CC;
+}
+
+.jstNum {
+ color: #D036D0;
+}
+
+.jstNull {
+ color: gray;
+}
+
+.jstStr {
+ color: #2DB669;
+}
+
+.jstFold:after {
+ content: ' -';
+ cursor: pointer;
+}
+
+.jstExpand {
+ white-space: normal;
+}
+
+.jstExpand:after {
+ content: ' +';
+ cursor: pointer;
+}
+
+.jstFolded {
+ white-space: normal !important;
+}
+
+.jstHiddenBlock {
+ display: none;
+}
+
 // General CSS
 .body,
 .header {
@@ -164,6 +223,10 @@ h5 {
   display: block;
   page-break-before: always;
  }*/
+ .collapse {
+  display: block !important;
+  height: auto !important;
+ }
  .html {
   color: black;
   background-color: white;
@@ -217,5 +280,6 @@ h5 {
  }
  .skillset {
   font-size: 8pt;
+  overflow: visible !important;
  }
 }
