--- a/css/styles.css
+++ b/css/styles.css
@@ -8730,21 +8730,12 @@ h5 {
   font-weight: bold;
 }
 
-@media all {
-  .page-break {
-    display: none;
-  }
-}
 @media print {
   ::first-letter {
     margin: 0;
     padding: 0;
   }
 
-  /*.brp {
-   display: block;
-   page-break-before: always;
-  }*/
   .collapse {
     display: block !important;
     height: auto !important;
@@ -8816,5 +8807,18 @@ h5 {
   .skillset {
     font-size: 8pt;
     overflow: visible !important;
+  }
+
+  .jstProperty,
+  .jstBool,
+  .jstNum,
+  .jstNull,
+  .jstStr {
+    color: #000;
+  }
+
+  @page {
+    margin-top: 14mm;
+    margin-bottom: 20mm;
   }
 }
