--- a/src/styles/Print.scss
+++ b/src/styles/Print.scss
@@ -5,10 +5,6 @@ $pageWidthIn: $pageWidth + 0in;
 $pageHeightIn: $pageHeight + 0in;
 $pageMarginsIn: $pageMargins + 0in;
 
-.test {
-  color: red;
-}
-
 .pic {
   width: 100%;
 }
@@ -37,6 +33,10 @@ $pageMarginsIn: $pageMargins + 0in;
   width: 100%;
 }
 
+.alwaysBreak {
+  display: none;
+}
+
 @media print {
   .rootPrint {
     padding-top: 0px !important;
@@ -57,6 +57,7 @@ $pageMarginsIn: $pageMargins + 0in;
   }
 
   .alwaysBreak {
+    display: block;
     page-break-after: always !important;
   }
 
