Increments version to v.2.3.1

--- a/src/styles/Print.scss
+++ b/src/styles/Print.scss
@@ -14,7 +14,7 @@ $pageMarginsIn: $pageMargins + 0in;
 }
 
 .onlyPrint {
-  display: block;
+  display: block !important;
 }
 
 .onlyPrintAfterInject {
